--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "deploy": "git push heroku master"
   },
   "keywords": [],
-  "engines": {
-    "node": "12.16.1"
+  "engine": {
+    "node": "12.16.1",
+    "npm": "6.13.4"
   },
   "author": "Oscar Zamudio",
   "license": "ISC",
