--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "develop": "concurrently \"npm run dev\" \"npm run client\"",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
-  "engine": {
+  "engines": {
     "node": "12.16.1",
     "npm": "6.13.4"
   },
