--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "develop": "concurrently \"npm run dev\" \"npm run client\"",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "engines": {
