--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "client": "npm start --prefix client",
     "develop": "concurrently \"npm run dev\" \"npm run client\"",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "deploy": "git push heroku master",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "engines": {
